--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "atom-dark-syntax",
+  "name": "yammez-syntax",
   "theme": "syntax",
-  "version": "0.26.0",
-  "description": "Default dark theme for syntax",
+  "version": "0.1",
+  "description": "Dark theme, pastel colors, based on old Dreamweaver color scheme.",
   "repository": "https://github.com/atom/atom-dark-syntax",
   "license": "MIT",
   "engines": {
