--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "yammez-syntax",
+  "name": "cool-syntax-for-attractive-people",
   "theme": "syntax",
-  "version": "1.0",
+  "version": "0.1.0",
+  "private": true,
   "description": "Dark theme, pastel colors, based on old Dreamweaver color scheme.",
-  "repository": "https://github.com/sparkjames/cool-syntax-for-attractive-people",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sparkjames/cool-syntax-for-attractive-people"
+  },
   "license": "MIT",
   "engines": {
-    "atom": ">0.50.0"
-  }
+    "atom": ">0.39.0"
+  },
+  "readme": "# Monokai theme\n\nA monokai syntax theme for Atom.\n\nOriginally converted from the [TextMate](http://www.monokai.nl/blog/wp-content/asdev/Monokai.tmTheme)\ntheme using the [TextMate bundle converter](http://atom.io/docs/latest/converting-a-text-mate-theme).\n\n![](https://f.cloud.github.com/assets/671378/2265671/d02ebee8-9e85-11e3-9b8c-12b2cb7015e3.png)\n",
+  "readmeFilename": "README.md",
+  "homepage": "https://github.com/sparkjames/cool-syntax-for-attractive-people"
 }
