--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "engines": {
     "atom": ">0.39.0"
   },
-  "readme": "# Monokai theme\n\nA monokai syntax theme for Atom.\n\nOriginally converted from the [TextMate](http://www.monokai.nl/blog/wp-content/asdev/Monokai.tmTheme)\ntheme using the [TextMate bundle converter](http://atom.io/docs/latest/converting-a-text-mate-theme).\n\n![](https://f.cloud.github.com/assets/671378/2265671/d02ebee8-9e85-11e3-9b8c-12b2cb7015e3.png)\n",
+  "readme": "# Cool Syntax For Attractive People\n\nUsed the dark syntax theme for Atom as a base.\n\nThis theme is like a dark pastel version of the old default Dreamweaver color scheme.\n",
   "readmeFilename": "README.md",
   "homepage": "https://github.com/sparkjames/cool-syntax-for-attractive-people"
 }
